# ProtectedExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_build/ProtectedExplorer_autogen/: moc_predefs.h  mocs_compilation.cpp
cmake_build/ProtectedExplorer_autogen/CCBC4FUR7J/: qrc_qml.cpp
doxygen_doc/: Doxyfile
include/: databaseaccessor.h  databasequery.h  emailmodel.h  filesystemdriver.h  folderexpl.h  loger.h  servsettings.h  settingscontroller.h
qml/: AbonentList.qml  AbonentListPopup.qml  AbonentPopupItem.qml  AddAbonentDialog.qml  AppButton.qml  AppComboBox.qml  DragElem.qml  DragWidthRect.qml  EmailDelegate.qml  EmailView.qml  ExplorerrView.qml  MainMenuBar.qml  PopupFMItem.qml  main.qml  qml.qrc  resource.rc
src/: databaseaccessor.cpp  databasequery.cpp  emailmodel.cpp  filesystemdriver.cpp  folderexpl.cpp  loger.cpp  main.cpp  servsettings.cpp  settingscontroller.cpp
